[project]
name = "comb-auctions-onchain"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "psycopg[binary]>=3.2.6",
    "pylint>=3.3.5",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.39",
    "eth-abi>=5.1.0",
    "eth-utils>=4.1.0",
    "eth-hash[pycryptodome]>=0.7.0",
]
